[gd_scene load_steps=6 format=3 uid="uid://bapdolxf7kn6q"]

[ext_resource type="Script" uid="uid://da3ju41wegb1i" path="res://Scripts/victoria.gd" id="1_kqkuu"]
[ext_resource type="Texture2D" uid="uid://bfbsnux3naqaw" path="res://Resources/Base Color.png" id="1_s61r2"]
[ext_resource type="FontFile" uid="uid://dfjgmo3enloc1" path="res://Fonts/8-bit-limit/8bitlimr.ttf" id="2_grkmi"]
[ext_resource type="Texture2D" uid="uid://c2e3k4k4istde" path="res://Fonts/8-bit-limit/Accent.png" id="3_4ixcr"]
[ext_resource type="Texture2D" uid="uid://q03beugv5lju" path="res://Resources/star_PNG41495.png" id="5_vcdu0"]

[node name="Victoria" type="Node2D"]
script = ExtResource("1_kqkuu")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
position = Vector2(480, 272)
scale = Vector2(1, 0.85)
color = Color(0, 1, 0, 1)

[node name="BaseColor" type="Sprite2D" parent="."]
position = Vector2(480, 272)
scale = Vector2(2, 1.7)
texture = ExtResource("1_s61r2")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(0, 50)
offset_top = 96.0
offset_right = 960.0
offset_bottom = 224.0
theme_override_fonts/normal_font = ExtResource("2_grkmi")
theme_override_font_sizes/normal_font_size = 90
bbcode_enabled = true
text = "[center]VICTORIA[/center]"

[node name="BoxContainer" type="BoxContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 384.0
offset_top = 136.0
offset_right = 576.0
offset_bottom = 512.0
grow_vertical = 2
size_flags_horizontal = 4
alignment = 1
vertical = true

[node name="TryAgain" type="Button" parent="BoxContainer"]
layout_mode = 2
text = "TORNA A INTENTAR-HO"

[node name="Menu" type="Button" parent="BoxContainer"]
layout_mode = 2
text = "MENÃš"

[node name="Exit" type="Button" parent="BoxContainer"]
layout_mode = 2
text = "SORTIR"

[node name="Accent" type="Sprite2D" parent="."]
position = Vector2(497, 86)
rotation = 0.699877
scale = Vector2(0.159864, 0.149351)
texture = ExtResource("3_4ixcr")

[node name="Estrella1" type="Sprite2D" parent="."]
visible = false
position = Vector2(416, 224)
scale = Vector2(0.02, 0.02)
texture = ExtResource("5_vcdu0")

[node name="Estrella2" type="Sprite2D" parent="."]
visible = false
position = Vector2(480, 224)
scale = Vector2(0.02, 0.02)
texture = ExtResource("5_vcdu0")

[node name="Estrella3" type="Sprite2D" parent="."]
visible = false
position = Vector2(544, 224)
scale = Vector2(0.02, 0.02)
texture = ExtResource("5_vcdu0")

[connection signal="pressed" from="BoxContainer/TryAgain" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="BoxContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="BoxContainer/Exit" to="." method="_on_exit_pressed"]
